# pam_mf

./: Makefile.in  README.md  configure  configure.ac  example.txt  pam_mf.conf  readme.txt
debian/: .gitignore  changelog.in  control  libpam-multifactor-auth.NEWS  libpam-multifactor-auth.doc-base  libpam-multifactor-auth.docs  libpam-multifactor-auth.examples  libpam-multifactor-auth.install.in  lintian-overrides  rules  watch
debian/upstream/: metadata
src/: config.c  config.h  md5.h  pam_mf.c  radius.c  radius.h  service.c  service.h
